<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        tools:context=".ui.shopping.FirstFragment"
        android:layout_width="match_parent"
    android:background="@drawable/scrollz"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
...
                android:id="@+id/image_shoppinglist"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/text_name_shoppinglist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/image_shoppinglist"
                android:text="Food"
...
